# sysklogd

./: .gitignore  .travis.yml  ANNOUNCE  CHANGES  ChangeLog.md  LICENSE  MANIFEST  Makefile  Makefile.am  NEWS  README.1st  README.linux  README.md  Sysklogd-1.3.lsm  TODO.org  configure.ac  kernel.patch  klogd.8  klogd.c  klogd.h  klogd.service.in  ksym.c  ksym_mod.c  module.h  oops.c  pidfile.c  pidfile.h  sysklogd.8  syslog.c  syslog.conf  syslog.conf.5  syslogd.c  syslogd.service.in  version.h
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  ccpp.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  init.d  libsyslog-dev.install  libsyslog0.symbols  logger.install  rules  syslogd.default  syslogd.install
docs/: CONTRIBUTING.md  INSTALL  README.1st  TODO.org
example/: Makefile.am  README.md  example.c  example.mk
lib/: .gitignore  pidfile.c  strlcat.c  strlcpy.c  utimensat.c
man/: Makefile.am  klogd.8  logger.1  sysklogd.8  syslog.conf.5  syslogd.8  syslogp.3
src/: .gitignore  Makefile.am  Makefile.old  compat.h  klogd.c  klogd.h  ksym.c  ksym_mod.c  ksyms.h  libsyslog.pc.in  logger.c  module.h  oops.c  pidfile.c  pidfile.h  queue.h  socket.c  socket.h  syslog-tst.conf  syslog.c  syslog.h  syslog_tst.c  syslogd.c  syslogd.h  timer.c  timer.h
test/: .gitignore  Makefile.am  api.c  api.sh  facility.sh  fwd.sh  hostname.sh  lib.sh  listen.sh  local.sh  logger.sh  mark.sh  mcast-fwd.sh  mcast-iface.sh  memleak.sh  multicast.sh  notify.sh  opts.sh  parens.sh  property.sh  raw.sh  regression.sh  remote.sh  rotate_all.sh  secure.sh  sighup.sh  start.sh  stop.sh  tag.sh  test.rc  unicode.sh
